infrastructure/k8s/base/namespace-and-secrets-production.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: avail-production
  labels:
    environment: production
