infrastructure/k8s/base/namespace-and-secrets.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: avail-staging  # change to avail-production for production
  labels:
    environment: staging
